--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "botman/driver-telegram",
+    "name": "wk-botman/driver-telegram",
     "license": "MIT",
     "description": "Telegram driver for BotMan",
     "keywords": [
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": ">=7.0",
-        "botman/botman": "~2.0"
+        "wk-botman/botman": "~2.0"
     },
     "require-dev": {
         "botman/studio-addons": "~1.0",
