--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": ">=7.0",
-        "wk-botman/botman": "2.1-dev"
+        "wk-botman/botman": "~1.0"
     },
     "require-dev": {
         "botman/studio-addons": "~1.0",
