--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": ">=7.0",
-        "botman/botman": "^2.0"
+        "wk-botman/botman": "^2.0"
     },
     "require-dev": {
         "illuminate/contracts": "~5.5.0",
